tests/lowering/toplevel-obligatory-annotations.stderr
error[E015]: missing mandatory type annotation on declaration `Alpha`
 >>> ${DIRECTORY}/lowering/toplevel-obligatory-annotations.lushui:3:1
  |
3 |   data Alpha =
  |  _^
4 | |     alpha a
  | |___________^ 
  |
 help: provide a type annotation for the declaration with `: TYPE`

error[E015]: missing mandatory type annotation on declaration `alpha`
 >>> ${DIRECTORY}/lowering/toplevel-obligatory-annotations.lushui:4:5
  |
4 |     alpha a
  |     ^^^^^^^ 
  |
 help: provide a type annotation for the declaration with `: TYPE`

error[E015]: missing mandatory type annotation on parameter `a`
 >>> ${DIRECTORY}/lowering/toplevel-obligatory-annotations.lushui:4:11
  |
4 |     alpha a
  |           ^ 
  |
 help: provide a type annotation for the parameter with `(a: TYPE)`

error[E015]: missing mandatory type annotation on declaration `Beta`
 >>> ${DIRECTORY}/lowering/toplevel-obligatory-annotations.lushui:6:1
  |
6 |   data Beta A =
  |  _^
7 | |     beta A: Beta A
  | |__________________^ 
  |
 help: provide a type annotation for the declaration with `: TYPE`

error[E015]: missing mandatory type annotation on parameter `A`
 >>> ${DIRECTORY}/lowering/toplevel-obligatory-annotations.lushui:6:11
  |
6 | data Beta A =
  |           ^ 
  |
 help: provide a type annotation for the parameter with `(A: TYPE)`

error[E015]: missing mandatory type annotation on parameter `A`
 >>> ${DIRECTORY}/lowering/toplevel-obligatory-annotations.lushui:7:10
  |
7 |     beta A: Beta A
  |          ^ 
  |
 help: provide a type annotation for the parameter with `(A: TYPE)`

error[E015]: missing mandatory type annotation on declaration `number`
 >>> ${DIRECTORY}/lowering/toplevel-obligatory-annotations.lushui:9:1
  |
9 | number = 0
  | ^^^^^^^^^^ 
  |
 help: provide a type annotation for the declaration with `: TYPE`

error[E015]: missing mandatory type annotation on declaration `apply`
  >>> ${DIRECTORY}/lowering/toplevel-obligatory-annotations.lushui:11:1
   |
11 | apply f x (partner in-crime) = f x
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
   |
  help: provide a type annotation for the declaration with `: TYPE`

error[E015]: missing mandatory type annotation on parameter `f`
  >>> ${DIRECTORY}/lowering/toplevel-obligatory-annotations.lushui:11:7
   |
11 | apply f x (partner in-crime) = f x
   |       ^ 
   |
  help: provide a type annotation for the parameter with `(f: TYPE)`

error[E015]: missing mandatory type annotation on parameter `x`
  >>> ${DIRECTORY}/lowering/toplevel-obligatory-annotations.lushui:11:9
   |
11 | apply f x (partner in-crime) = f x
   |         ^ 
   |
  help: provide a type annotation for the parameter with `(x: TYPE)`

error[E015]: missing mandatory type annotation on parameters `partner` and `in-crime`
  >>> ${DIRECTORY}/lowering/toplevel-obligatory-annotations.lushui:11:11
   |
11 | apply f x (partner in-crime) = f x
   |           ^^^^^^^^^^^^^^^^^^ 
   |
  help: provide a type annotation for the parameters with `(partner in-crime: TYPE)`

error: aborting due to 11 previous errors

