tests/lowering/toplevel-obligatory-annotations.lushui
;; TEST fail check

data Alpha =
    alpha a

data Beta A =
    beta A: Beta A

number = 0

apply f x (partner in-crime) = f x
